Added multiple managers

--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -10787,8 +10787,8 @@ rbac#:#role_confirm_block_role_info#:#The following steps will be performed for 
 rbac#:#role_confirm_unblock_role_info#:#The following steps will be performed for the action "Unblock Role":<br /><br />- the local policy will be deleted.
 rbac#:#role_confirm_block_role_header#:#Do you really want to change the block role status of the chosen roles?
 dateplaner#:#cal_ch_manager#:#Consultation Hour Manager
-dateplaner#:#cal_ch_manager_info#:#Login of the user who will manage your consultation hours.
-dateplaner#:#cal_ch_unknown_user#:#The given login does not match any user.
+dateplaner#:#cal_ch_manager_info#:#Login of the user(s) who will manage your consultation hours.
+dateplaner#:#cal_ch_unknown_user#:#At least one of the given login names does not match any user.
 dateplaner#:#cal_ch_target_object#:#Repository Object
 dateplaner#:#cal_ch_target_object_info#:#Consultation hours will be displayed in a block to the right of the course / group content. To restrict the display of consultation hours to specific courses or groups, please enter the Ref-ID of the said objects. You find the Ref-ID in the URL of the respective objects. Add more than one Ref-ID separated by comma.
 dateplaner#:#cal_ch_unknown_repository_object#:#The given repository object ref-id is not valid.
