--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -7210,7 +7210,7 @@ dateplaner#:#cal_ch_form#:#Aktiviere Sprechstundenverwaltung
 dateplaner#:#cal_ch_form_header#:#Sprechstundenverwaltung
 dateplaner#:#cal_ch_form_info#:#Diese Option aktiviert die Sprechstundenverwaltung im Kalender
 dateplaner#:#cal_ch_manager#:#Sprechstunden-Manager
-dateplaner#:#cal_ch_manager_info#:#Benutzername des Anwenders, der ebenfalls Ihre Sprechstunden bearbeiten und betreuen darf.
+dateplaner#:#cal_ch_manager_info#:#Benutzername(n) der Anwender, die ebenfalls Ihre Sprechstunden bearbeiten und betreuen dürfen.
 dateplaner#:#cal_ch_multi_edit_sequence#:#Termine editieren
 dateplaner#:#cal_ch_num_appointments#:#Anzahl an Terminen pro Sprechstunde
 dateplaner#:#cal_ch_num_appointments_info#:#Legen Sie fest, wie viel aufeinander folgende Termine generiert werden sollen.
@@ -7220,7 +7220,7 @@ dateplaner#:#cal_ch_personal_ch#:#Persönliche Sprechstundentermine
 dateplaner#:#cal_ch_target_object#:#Objekt im Magazin
 dateplaner#:#cal_ch_target_object_info#:#Die Sprechstunden werden nur in den ausgewählten Kursen und Gruppen in einem kleinen Block rechts angezeigt. Geben Sie die Ref-ID des betreffenden Objektes ein. Sie finden diese in der URL des entsprechenden Objekts. Mehrere Ref-IDs geben Sie kommagetrennt ein.
 dateplaner#:#cal_ch_unknown_repository_object#:#Die angegebene Kennung des Objekts ist nicht gültig.
-dateplaner#:#cal_ch_unknown_user#:#Der eingegebene Benutzername existiert nicht.
+dateplaner#:#cal_ch_unknown_user#:#Mindestens einer der eingegebenen Benutzernamen existiert nicht.
 dateplaner#:#cal_change_responsible_users#:#Verantwortliche Mitglieder ändern
 dateplaner#:#cal_changed_events_header#:#Neue und geänderte Termine
 dateplaner#:#cal_confirm_booking#:#Sprechstunde buchen
